- generate dto, api calls with openapi-generator - create mapper with mapstruct - use @Data annotation for getters and setters in entities
