# backend/src/main/java/com/brestlife/backend/controller/JobController.java
@@ -1,6 +1,8 @@
 package com.brestlife.backend.controller;
 
-import com.brestlife.backend.entity.Job;
+import com.brestlife.backend.entity.JobEntity;
+import com.brestlife.backend.mapper.DealMapper;
+import com.brestlife.backend.mapper.JobMapper;
 import com.brestlife.backend.service.JobService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -13,6 +15,7 @@ import java.util.Optional;
 public class JobController {
 
     private final JobService jobService;
+    private final JobMapper jobMapper = JobMapper.INSTANCE;
 
     public JobController(JobService jobService) {
         this.jobService = jobService;
@@ -20,31 +23,31 @@ public class JobController {
 
     // Endpoint : GET /api/jobs
     @GetMapping
-    public List<Job> getAllJobs() {
+    public List<JobEntity> getAllJobs() {
         return jobService.getAllJobs();
     }
 
     // Endpoint : GET /api/jobs/{id}
     @GetMapping("/{id}")
-    public ResponseEntity<Job> getJobById(@PathVariable Integer id) {
-        Optional<Job> job = jobService.getJobById(id);
+    public ResponseEntity<JobEntity> getJobById(@PathVariable Integer id) {
+        Optional<JobEntity> job = jobService.getJobById(id);
         return job.map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     // Endpoint : GET /api/jobs/{companyName}
     @GetMapping("/{companyName}")
-    public ResponseEntity<Job> getJobByCompanyName(@PathVariable String companyName) {
-        Optional<Job> job = jobService.getJobByCompanyName(companyName);
+    public ResponseEntity<JobEntity> getJobByCompanyName(@PathVariable String companyName) {
+        Optional<JobEntity> job = jobService.getJobByCompanyName(companyName);
         return job.map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     // Endpoint : POST /api/jobs
     @PostMapping
-    public ResponseEntity<Job> createJob(@RequestBody Job job) {
+    public ResponseEntity<JobEntity> createJob(@RequestBody JobEntity job) {
         if (jobService.existsByName(job.getCompanyName())) {
             return ResponseEntity.badRequest().body(null); // Nom déjà utilisé
         }
-        Job savedJob = jobService.saveJob(job);
+        JobEntity savedJob = jobService.saveJob(job);
         return ResponseEntity.ok(savedJob);
     }
 
